fixing alignment again

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,10 +75,10 @@ ul {
   font-size: 1.4em;
 }
 
-.row{
+.row_index {
   margin-right: -150px;
   margin-left: -50px;
-  margin-bottom: -50px;
+  margin-top: 80px;
 }
 
 /**********************/
